--- a/StructureSelector/StructureSelector.csproj
+++ b/StructureSelector/StructureSelector.csproj
@@ -89,8 +89,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>if exist "J:\Drawings REVIT FAMILIES\02 NEW\Aris\Addins\PetersimeV2\DLLs" copy "$(ProjectDir)$(OutputPath)$(TargetFileName)" "J:\Drawings REVIT FAMILIES\02 NEW\Aris\Addins\PetersimeV2\DLLs"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
